[package]
name = "kb_layout"
version = "0.1.0"
edition = "2021"

[profile.dist]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "kb_layout_server"
path = "src/bin/server.rs"

[[bin]]
name = "kb_layout_client"
path = "src/bin/client.rs"

[dependencies]
status_core = { path = "../status_core" }
